Implement reply functionality for contact inquiries with email validation and notification

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ PORT = 4000
 MONGO_URI = "mongodb://localhost:27017/sabzLearn"
 
 JWT_SECRET = "sabzLearn"
+
+EMAIL= "codetestalireza@gmail.com"
+
+PASSWORD= "wahg yhyo sbkz wbey"
